K8S/netflix-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-clone-svc
  namespace: netflix
spec:
  type: ClusterIP
  selector:
    app: netflix-clone
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-clone
  namespace: netflix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: netflix-clone
  template:
    metadata:
      labels:
        app: netflix-clone
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: netflix-clone
      containers:
        - name: web
          image: mostafagheta/netflix-clone:latest
          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
